# qt_timm

./: README.md  pyproject.toml
timm/data/: dataset_factory.py
